<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:orientation="horizontal"
    android:id="@+id/linearLayout">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvCharacterKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Character"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPinyinKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:text="@string/pinyin"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/tvTranslationKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:text="@string/translation"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/tvLectureKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:text="@string/lecture"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="3"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etCharacterKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="text" />


            <EditText
                android:id="@+id/etPinyinKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="text" />


            <EditText
                android:id="@+id/etTranslationKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="text" />


            <EditText
                android:id="@+id/etLectureKB"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSaveAndSnap"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/btnSave"
            android:layout_toLeftOf="@+id/btnSave"
            android:layout_toStartOf="@+id/btnSave"
            android:layout_weight="3"
            android:onClick="onClick"
            android:text="@string/save_and_snap_again" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/btnSaveAndSnap"
            android:layout_toLeftOf="@+id/btnSaveAndSnap"
            android:layout_toStartOf="@+id/btnSaveAndSnap"
            android:layout_weight="3"
            android:onClick="onClick"
            android:text="@string/return_menu" />

        <Button
            android:id="@+id/btnActualize"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/btnExit"
            android:layout_weight="3"
            android:onClick="onClick"
            android:text="Actualize DB" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
