<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp.learnchinese.ShowCharacter">

    <TextView
        android:id="@+id/tvCharacter"
        android:layout_width="279dp"
        android:layout_height="165dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/textview"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPinyinShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacter"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTranslationShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:maxWidth="200dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvPinyinShow" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/ping_ying"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/translation"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvCountCharacter"
        android:layout_width="67dp"
        android:layout_height="49dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="50dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/ic_menu_delete"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="btnDeleteCharacter"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="btnManualClick"
        android:text="@string/manual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="btnBackClick"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fieldManualInfo"
        android:layout_width="258dp"
        android:layout_height="233dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/colorButtonNormal"
        android:backgroundTint="?attr/colorButtonNormal"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="164dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:text="@string/right_swipe_to_show_next_character"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="164dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:text="@string/left_swipe_to_show_next_character"
            android:textColor="@android:color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:minHeight="50dp"
            android:text="@string/double_tap_to"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/swipe_left"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@mipmap/swipe_right" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="41dp"
            android:layout_height="53dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@mipmap/double_tap"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
