<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp.learnchinese.ChooseLectureActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:text="Сhoose lectures which you want to study: "
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="@string/title_choose_lecture" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="214dp"
        android:layout_height="wrap_content"

        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/checkboxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">


            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 3" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 4" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 5" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 6" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 7" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 8" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 9" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 10" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 11" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 12" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 13" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 14" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 15" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 16" />

            <CheckBox
                android:id="@+id/checkBox17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 17" />

            <CheckBox
                android:id="@+id/checkBox18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 18" />

            <CheckBox
                android:id="@+id/checkBox19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 19" />

            <CheckBox
                android:id="@+id/checkBox20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 20" />

            <CheckBox
                android:id="@+id/checkBox21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 21" />

            <CheckBox
                android:id="@+id/checkBox22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 22" />

            <CheckBox
                android:id="@+id/checkBox23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 23" />

            <CheckBox
                android:id="@+id/checkBox24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 24" />

            <CheckBox
                android:id="@+id/checkBox25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 25" />

            <CheckBox
                android:id="@+id/checkBox26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 26" />

            <CheckBox
                android:id="@+id/checkBox27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 27" />

            <CheckBox
                android:id="@+id/checkBox28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 28" />

            <CheckBox
                android:id="@+id/checkBox29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 29" />

            <CheckBox
                android:id="@+id/checkBox30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 30" />

            <CheckBox
                android:id="@+id/checkBox31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 31" />

            <CheckBox
                android:id="@+id/checkBox32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 32" />

            <CheckBox
                android:id="@+id/checkBox33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lecture 33" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnBeginStudy"
        android:layout_width="103dp"
        android:layout_height="62dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:onClick="btnBeginClick"
        android:text="@string/btn_begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="103dp"
        android:layout_height="64dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:onClick="btnBackClick"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toTopOf="@+id/btnBeginStudy"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
